# mle-training

./: .dockerignore  Dockerfile  README.md  env.yml  housinglib-0.1.0-py3-none-any.whl  main.py  nonstandardcode.py  pyproject.toml  requirements.txt  setup.py  test.rb
Module1/Assignment1.1/: my_conda_session  my_git_session  my_unix_session
artifacts/: imputer.pkl
deploy/conda/: env.yml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  housinglib.doctree  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  housinglib.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: housinglib.html  (+1 more)
mlruns/0/: meta.yaml
mlruns/622430482791415905/: meta.yaml
mlruns/622430482791415905/244659c45b0c4959bdc2ca1868c7e494/: meta.yaml
mlruns/622430482791415905/26e15c6a703a4d7a9adb901c3bbb7656/: meta.yaml
mlruns/622430482791415905/49185f16ec99410b8fe860c98c3f2417/: meta.yaml
mlruns/622430482791415905/61b848c52c684ba5b175d8c7782af6e7/: meta.yaml
mlruns/622430482791415905/6de9989c1454415a93d76a103cfccf94/: meta.yaml
mlruns/622430482791415905/854ea9a2b7524f788896c9d6d6b33d9b/: meta.yaml
mlruns/622430482791415905/9d956cee48d0414a9fa5b6a6392ed1a5/: meta.yaml
notebooks/: Housing_price_prediction.ipynb
scripts/: ingest_data.py  score.py  train.py
src/housinglib/: housinglib.py
src/housinglib_utkarsh/: housinglib_utkarsh.py
tests/functionaltests/: test_download.py
tests/installationtests/: test_housinglib.py
tests/unittests/: test_housing.py
(+23 files in other folders)
