[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "housinglib_utkarsh"
version = "0.0.2"
authors = [
  { name="Utkarsh Srivastava", email="utkarsh.srivasta01@gmail.com" },
]
description = "This package contains the functions like loading data and creating features and training the data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/utkarsh-srivastava-5139/mle-training"
